--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
         <version>2.8.1</version>
         <executions>
           <execution>
-            <id>compile-js</id>
+            <id>compile-js-gwt</id>
             <phase>prepare-package</phase>
             <goals>
               <goal>compile</goal>
@@ -74,7 +74,8 @@
           </execution>
         </executions>
       </plugin>
-      <!-- ships a classes jar too -->
+
+      <!-- ship a classes jar too -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
@@ -105,5 +106,127 @@
       <url>https://repo.vertispan.com/j2cl</url>
     </snapshotRepository>
   </distributionManagement>
+
+  <profiles>
+    <profile>
+      <id>devmode</id>
+      <build>
+        <defaultGoal>process-classes</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>3.0.2</version>
+            <executions>
+              <execution>
+                <id>build-java-classpath</id>
+                <phase>process-classes</phase>
+                <goals>
+                  <goal>build-classpath</goal>
+                </goals>
+                <configuration>
+                  <includeTypes>jar</includeTypes>
+                  <outputProperty>java-classpath</outputProperty>
+                </configuration>
+              </execution>
+              <execution>
+                <id>build-js-classpath</id>
+                <phase>process-classes</phase>
+                <goals>
+                  <goal>build-classpath</goal>
+                </goals>
+                <configuration>
+                  <classifier>jszip</classifier>
+                  <type>zip</type>
+                  <outputProperty>js-classpath</outputProperty>
+                </configuration>
+              </execution>
+              <execution>
+                <id>copy-bootstrap</id>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <!--<artifact>com.vertispan.j2cl:bootstrap:0.1-SNAPSHOT:zip:jszip</artifact>-->
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>com.vertispan.j2cl</groupId>
+                      <artifactId>jre</artifactId>
+                      <version>0.1-SNAPSHOT</version>
+                      <classifier>jszip</classifier>
+                      <type>zip</type>
+                      <destFileName>jre.js.zip</destFileName>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>com.vertispan.j2cl</groupId>
+                      <artifactId>jre</artifactId>
+                      <version>0.1-SNAPSHOT</version>
+                      <destFileName>jre.jar</destFileName>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>com.vertispan.j2cl</groupId>
+                      <artifactId>bootstrap</artifactId>
+                      <version>0.1-SNAPSHOT</version>
+                      <classifier>jszip</classifier>
+                      <type>zip</type>
+                      <destFileName>bootstrap.js.zip</destFileName>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.6.0</version>
+            <executions>
+              <execution>
+                <id>run-devmode</id>
+                <phase>process-classes</phase>
+                <goals>
+                  <goal>java</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <includeProjectDependencies>false</includeProjectDependencies>
+              <includePluginDependencies>true</includePluginDependencies>
+              <!--<executableDependency>-->
+                <!--<groupId>com.vertispan.j2cl</groupId>-->
+                <!--<artifactId>build-tools</artifactId>-->
+              <!--</executableDependency>-->
+              <includeProjectDependencies>false</includeProjectDependencies>
+              <mainClass>com.vertispan.j2cl.DevMode</mainClass>
+              <arguments>
+                <argument>-classpath</argument>
+                <argument>${java-classpath}:${project.build.directory}/dependency/jre.jar</argument>
+                <argument>-jsClasspath</argument>
+                <argument>${js-classpath}:${project.build.directory}/dependency/bootstrap.js.zip:${project.build.directory}/dependency/jre.js.zip</argument>
+                <argument>-out</argument>
+                <argument>out</argument>
+                <argument>-src</argument>
+                <argument>src/main/java</argument>
+                <argument>-classes</argument>
+                <argument>target/classes</argument>
+                <argument>-entrypoint</argument>
+                <argument>com.vertispan.draw.connected.client.FlowChartEntryPoint</argument>
+
+              </arguments>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>com.vertispan.j2cl</groupId>
+                <artifactId>build-tools</artifactId>
+                <version>0.1-SNAPSHOT</version>
+                <type>jar</type>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
