--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <properties>
     <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <kotlin.version>1.1.4-3</kotlin.version>
+    <kotlin.version>1.1.51</kotlin.version>
   </properties>
 
   <dependencies>
@@ -30,14 +30,8 @@
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib-jre8</artifactId>
+      <artifactId>kotlin-stdlib-js</artifactId>
       <version>${kotlin.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-test</artifactId>
-      <version>${kotlin.version}</version>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -71,35 +65,6 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
-      <!-- Compiles the app to JavaScript -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>gwt-maven-plugin</artifactId>
-        <version>2.8.1</version>
-        <executions>
-          <execution>
-            <id>compile-js</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <!-- ships a classes jar too -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>2.1.2</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>jar-no-fork</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
       <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-maven-plugin</artifactId>
@@ -109,7 +74,7 @@
             <id>compile</id>
             <phase>compile</phase>
             <goals>
-              <goal>compile</goal>
+              <goal>js</goal>
             </goals>
             <configuration>
               <sourceDirs>
@@ -122,15 +87,11 @@
             <id>test-compile</id>
             <phase>test-compile</phase>
             <goals>
-              <goal>test-compile</goal>
+              <goal>test-js</goal>
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <jvmTarget>1.8</jvmTarget>
-        </configuration>
       </plugin>
-
     </plugins>
 
   </build>
