--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.google.elemental2</groupId>
-      <artifactId>elemental2-dom</artifactId>
-      <version>1.0.0-beta-1</version>
+      <groupId>org.teavm</groupId>
+      <artifactId>teavm-jso-apis</artifactId>
+      <version>0.5.1</version>
     </dependency>
   </dependencies>
 
