--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,13 @@
     <dependency>
       <groupId>org.teavm</groupId>
       <artifactId>teavm-jso-apis</artifactId>
-      <version>0.5.1</version>
+      <version>0.6.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.teavm</groupId>
+      <artifactId>teavm-classlib</artifactId>
+      <version>0.6.0-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
@@ -61,18 +67,17 @@
       </plugin>
       <!-- Compiles the app to JavaScript -->
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>gwt-maven-plugin</artifactId>
-        <version>2.8.1</version>
-        <executions>
-          <execution>
-            <id>compile-js</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-        </executions>
+        <groupId>org.teavm</groupId>
+        <artifactId>teavm-maven-plugin</artifactId>
+        <version>0.6.0-SNAPSHOT</version>
+        <goals>
+          <goal>compile</goal>
+        </goals>
+        <configuration>
+          <mainClass>com.vertispan.draw.connected.client.FlowChartEntryPoint</mainClass>
+          <minifying>false</minifying>
+          <targetDirectory>out/</targetDirectory>
+        </configuration>
       </plugin>
       <!-- ships a classes jar too -->
       <plugin>
