--- a/pom.xml
+++ b/pom.xml
@@ -70,14 +70,22 @@
         <groupId>org.teavm</groupId>
         <artifactId>teavm-maven-plugin</artifactId>
         <version>0.6.0-SNAPSHOT</version>
-        <goals>
-          <goal>compile</goal>
-        </goals>
-        <configuration>
-          <mainClass>com.vertispan.draw.connected.client.FlowChartEntryPoint</mainClass>
-          <minifying>false</minifying>
-          <targetDirectory>out/</targetDirectory>
-        </configuration>
+        <executions>
+          <execution>
+            <id>compile-to-js</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+            <configuration>
+              <mainClass>com.vertispan.draw.connected.client.FlowChartEntryPoint</mainClass>
+              <targetDirectory>out/</targetDirectory>
+              <minifying>true</minifying>
+              <optimizationLevel>ADVANCED</optimizationLevel>
+              <
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <!-- ships a classes jar too -->
       <plugin>
