gradle kotlin js dce example build files

--- a/pom.xml
+++ b/pom.xml
@@ -2,125 +2,139 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.vertispan.draw</groupId>
-  <artifactId>connected</artifactId>
-  <version>0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
-  <name>Connected</name>
-  <description>Simple Graphs and Flowcharts in GWT</description>
-  <organization>
-    <name>Vertispan</name>
-    <url>http://vertispan.com</url>
-  </organization>
-  <inceptionYear>2017</inceptionYear>
+    <groupId>com.vertispan.draw</groupId>
+    <artifactId>connected</artifactId>
+    <version>0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>Connected</name>
+    <description>Simple Graphs and Flowcharts in GWT</description>
+    <organization>
+        <name>Vertispan</name>
+        <url>http://vertispan.com</url>
+    </organization>
+    <inceptionYear>2017</inceptionYear>
 
-  <properties>
-    <java.version>1.8</java.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <kotlin.version>1.1.51</kotlin.version>
-  </properties>
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!--<kotlin.version>1.2.0-beta-88</kotlin.version>-->
+        <kotlin.version>1.1.51</kotlin.version>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-js</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+    </dependencies>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib-js</artifactId>
-      <version>${kotlin.version}</version>
-    </dependency>
-  </dependencies>
+    <build>
+        <plugins>
+            <!-- licensing -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <id>license-update</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>update-file-header</goal>
+                            <goal>add-third-party</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <licenseName>apache_v2</licenseName>
+                </configuration>
+            </plugin>
+            <!-- Java defaults -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>js</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <source>src/main/java</source>
+                                <source>target/generated-sources/license</source>
+                            </sourceDirs>
+                            <compilerPlugins>
+                                <!--<compilerPlugin>kotlin-js-dce</compilerPlugin>-->
+                            </compilerPlugins>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>test-compile</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>test-js</goal>
+                        </goals>
+                    </execution><!--
+                        <execution>
+                            <id>dce</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>js</goal>
+                            </goals>
+                            <configuration>
+                                <sourceDirs>
+                                    <sourceDir>${build.outputDirectory}/js</sourceDir>
+                                </sourceDirs>
+                            </configuration>
+                        </execution>-->
+                </executions>
+            </plugin>
+            <!-- unpack kotlin.js to target/classes/lib for example index.html -->
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>extract-kotlinjs</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>unpack-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeArtifactIds>kotlin-stdlib-js</includeArtifactIds>
+                            <outputDirectory>${build.outputDirectory}/lib</outputDirectory>
+                            <includes>**\/*.js</includes>
+                            <excludes>**\/*.meta.js</excludes> <!-- we don't need meta.js files in runtime -->
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
 
-  <build>
-    <plugins>
-      <!-- licensing -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>license-maven-plugin</artifactId>
-        <version>1.4</version>
-        <executions>
-          <execution>
-            <id>license-update</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>update-file-header</goal>
-              <goal>add-third-party</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <licenseName>apache_v2</licenseName>
-        </configuration>
-      </plugin>
-      <!-- Java defaults -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.jetbrains.kotlin</groupId>
-        <artifactId>kotlin-maven-plugin</artifactId>
-        <version>${kotlin.version}</version>
-        <executions>
-          <execution>
-            <id>compile</id>
-            <phase>compile</phase>
-            <goals>
-              <goal>js</goal>
-            </goals>
-            <configuration>
-              <sourceDirs>
-                <source>src/main/java</source>
-                <source>target/generated-sources/license</source>
-              </sourceDirs>
-            </configuration>
-          </execution>
-          <execution>
-            <id>test-compile</id>
-            <phase>test-compile</phase>
-            <goals>
-              <goal>test-js</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <!-- unpack kotlin.js to target/classes/lib for example index.html -->
-      <plugin>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>extract-kotlinjs</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>unpack-dependencies</goal>
-            </goals>
-            <configuration>
-              <includeArtifactIds>kotlin-stdlib-js</includeArtifactIds>
-              <outputDirectory>${build.outputDirectory}/lib</outputDirectory>
-              <includes>**\/*.js</includes>
-              <excludes>**\/*.meta.js</excludes> <!-- we don't need meta.js files in runtime -->
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-
-  </build>
-
-  <distributionManagement>
-    <repository>
-      <id>vertispan-releases</id>
-      <name>Vertispan hosted artifacts-releases</name>
-      <url>https://repo.vertispan.com/j2cl</url>
-    </repository>
-    <snapshotRepository>
-      <id>vertispan-snapshots</id>
-      <name>Vertispan hosted artifacts-snapshots</name>
-      <url>https://repo.vertispan.com/j2cl</url>
-    </snapshotRepository>
-  </distributionManagement>
+    </build>
+    <distributionManagement>
+        <repository>
+            <id>vertispan-releases</id>
+            <name>Vertispan hosted artifacts-releases</name>
+            <url>https://repo.vertispan.com/j2cl</url>
+        </repository>
+        <snapshotRepository>
+            <id>vertispan-snapshots</id>
+            <name>Vertispan hosted artifacts-snapshots</name>
+            <url>https://repo.vertispan.com/j2cl</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
