--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.2.0-beta-88'
-//    ext.kotlin_version = '1.1.4-eap-33'
+//    ext.kotlin_version = '1.2.0-beta-88'
+    ext.kotlin_version = '1.1.4-eap-33'
 
     repositories {
         maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1' }
