--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.google.elemental2</groupId>
+      <groupId>com.vertispan.elemental2</groupId>
       <artifactId>elemental2-dom</artifactId>
-      <version>1.0.0-beta-1</version>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
@@ -63,7 +63,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
-        <version>2.8.1</version>
+        <version>2.8.2</version>
         <executions>
           <execution>
             <id>compile-js-gwt</id>
@@ -165,14 +165,6 @@
                       <type>zip</type>
                       <destFileName>bootstrap.js.zip</destFileName>
                     </artifactItem>
-                    <artifactItem>
-                      <groupId>com.google.jsinterop</groupId>
-                      <artifactId>base</artifactId>
-                      <version>1.0.0-beta-1</version>
-                      <classifier>jszip</classifier>
-                      <type>zip</type>
-                      <destFileName>jsinterop-base.js.zip</destFileName>
-                    </artifactItem>
                   </artifactItems>
                 </configuration>
               </execution>
@@ -205,7 +197,7 @@
                 <argument>-classpath</argument>
                 <argument>${java-classpath}:${project.build.directory}/dependency/jre.jar:${project.build.directory}/dependency/gwt-internal-annotations.jar</argument>
                 <argument>-jsClasspath</argument>
-                <argument>${project.build.directory}/dependency/bootstrap.js.zip:${project.build.directory}/dependency/jre.js.zip:${project.build.directory}/dependency/jsinterop-base.js.zip</argument>
+                <argument>${project.build.directory}/dependency/bootstrap.js.zip:${project.build.directory}/dependency/jre.js.zip</argument>
                 <argument>-out</argument>
                 <argument>out</argument>
                 <argument>-src</argument>
@@ -231,4 +223,13 @@
     </profile>
   </profiles>
 
+  <repositories>
+    <repository>
+      <id>vertispan-releases</id>
+      <name>Vertispan hosted artifacts-releases</name>
+      <url>https://repo.vertispan.com/j2cl</url>
+      <releases><enabled>true</enabled></releases>
+      <snapshots><enabled>true</enabled></snapshots>
+    </repository>
+  </repositories>
 </project>
