--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,12 @@
                       <type>zip</type>
                       <destFileName>bootstrap.js.zip</destFileName>
                     </artifactItem>
+                    <artifactItem>
+                      <groupId>com.vertispan.j2cl</groupId>
+                      <artifactId>javac-bootstrap-classpath</artifactId>
+                      <version>0.2-SNAPSHOT</version>
+                      <destFileName>javac-bootstrap-classpath.jar</destFileName>
+                    </artifactItem>
                   </artifactItems>
                 </configuration>
               </execution>
@@ -204,6 +210,8 @@
                 <argument>${java-classpath}:${project.build.directory}/dependency/jre.jar:${project.build.directory}/dependency/gwt-internal-annotations.jar</argument>
                 <argument>-jsClasspath</argument>
                 <argument>${project.build.directory}/dependency/bootstrap.js.zip:${project.build.directory}/dependency/jre.js.zip</argument>
+                <argument>-javacBootClasspath</argument>
+                <argument>${project.build.directory}/dependency/javac-bootstrap-classpath.jar</argument>
                 <argument>-out</argument>
                 <argument>out</argument>
                 <argument>-src</argument>
@@ -217,9 +225,9 @@
             </configuration>
             <dependencies>
               <dependency>
-                <groupId>com.vertispan.j2cl</groupId>
+                <groupId>net.cardosi.j2cl</groupId>
                 <artifactId>build-tools</artifactId>
-                <version>0.2-SNAPSHOT</version>
+                <version>0.3-SNAPSHOT</version>
                 <type>jar</type>
               </dependency>
             </dependencies>
