--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>com.vertispan.draw</groupId>
   <artifactId>connected</artifactId>
   <version>0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   <name>Connected</name>
   <description>Simple Graphs and Flowcharts in GWT</description>
   <organization>
@@ -23,9 +23,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.vertispan.elemental2</groupId>
+      <groupId>com.google.elemental2</groupId>
       <artifactId>elemental2-dom</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-RC1</version>
     </dependency>
     <dependency>
       <groupId>org.gwtproject.event</groupId>
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>com.google.jsinterop</groupId>
       <artifactId>jsinterop-annotations</artifactId>
-      <version>HEAD-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>
   </dependencies>
 
@@ -71,18 +71,12 @@
       </plugin>
       <!-- Compiles the app to JavaScript -->
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>gwt-maven-plugin</artifactId>
-        <version>2.8.2</version>
-        <executions>
-          <execution>
-            <id>compile-js-gwt</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-        </executions>
+        <groupId>com.vertispan.j2cl</groupId>
+        <artifactId>j2cl-maven-plugin</artifactId>
+        <version>0.10-SNAPSHOT</version>
+        <configuration>
+          <entrypoint>com.vertispan.draw.connected.client.FlowChartEntryPoint</entrypoint>
+        </configuration>
       </plugin>
 
       <!-- ship a classes jar too -->
@@ -117,125 +111,6 @@
     </snapshotRepository>
   </distributionManagement>
 
-  <profiles>
-    <profile>
-      <id>devmode</id>
-      <build>
-        <defaultGoal>process-classes</defaultGoal>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <version>3.0.2</version>
-            <executions>
-              <execution>
-                <id>build-java-classpath</id>
-                <phase>process-classes</phase>
-                <goals>
-                  <goal>build-classpath</goal>
-                </goals>
-                <configuration>
-                  <includeTypes>jar</includeTypes>
-                  <outputProperty>java-classpath</outputProperty>
-                </configuration>
-              </execution>
-              <execution>
-                <id>copy-bootstrap</id>
-                <goals>
-                  <goal>copy</goal>
-                </goals>
-                <configuration>
-                  <!--<artifact>com.vertispan.j2cl:bootstrap:0.1-SNAPSHOT:zip:jszip</artifact>-->
-                  <artifactItems>
-                    <artifactItem>
-                      <groupId>com.vertispan.j2cl</groupId>
-                      <artifactId>jre</artifactId>
-                      <version>0.2-SNAPSHOT</version>
-                      <classifier>jszip</classifier>
-                      <type>zip</type>
-                      <destFileName>jre.js.zip</destFileName>
-                    </artifactItem>
-                    <artifactItem>
-                      <groupId>com.vertispan.j2cl</groupId>
-                      <artifactId>jre</artifactId>
-                      <version>0.2-SNAPSHOT</version>
-                      <destFileName>jre.jar</destFileName>
-                    </artifactItem>
-                    <artifactItem>
-                      <groupId>com.vertispan.j2cl</groupId>
-                      <artifactId>gwt-internal-annotations</artifactId>
-                      <version>0.2-SNAPSHOT</version>
-                      <destFileName>gwt-internal-annotations.jar</destFileName>
-                    </artifactItem>
-                    <artifactItem>
-                      <groupId>com.vertispan.j2cl</groupId>
-                      <artifactId>bootstrap</artifactId>
-                      <version>0.2-SNAPSHOT</version>
-                      <classifier>jszip</classifier>
-                      <type>zip</type>
-                      <destFileName>bootstrap.js.zip</destFileName>
-                    </artifactItem>
-                    <artifactItem>
-                      <groupId>com.vertispan.j2cl</groupId>
-                      <artifactId>javac-bootstrap-classpath</artifactId>
-                      <version>0.2-SNAPSHOT</version>
-                      <destFileName>javac-bootstrap-classpath.jar</destFileName>
-                    </artifactItem>
-                  </artifactItems>
-                </configuration>
-              </execution>
-
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.6.0</version>
-            <executions>
-              <execution>
-                <id>run-devmode</id>
-                <phase>process-classes</phase>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <includeProjectDependencies>false</includeProjectDependencies>
-              <includePluginDependencies>true</includePluginDependencies>
-              <includeProjectDependencies>false</includeProjectDependencies>
-              <mainClass>com.vertispan.j2cl.DevMode</mainClass>
-              <arguments>
-                <argument>-classpath</argument>
-                <argument>${java-classpath}:${project.build.directory}/dependency/jre.jar:${project.build.directory}/dependency/gwt-internal-annotations.jar</argument>
-                <argument>-jsClasspath</argument>
-                <argument>${project.build.directory}/dependency/bootstrap.js.zip:${project.build.directory}/dependency/jre.js.zip</argument>
-                <argument>-javacBootClasspath</argument>
-                <argument>${project.build.directory}/dependency/javac-bootstrap-classpath.jar</argument>
-                <argument>-out</argument>
-                <argument>out</argument>
-                <argument>-src</argument>
-                <argument>src/main/java</argument>
-                <argument>-jsZipCache</argument>
-                <argument>jsZipCache</argument>
-                <argument>-entrypoint</argument>
-                <argument>com.vertispan.draw.connected.client.FlowChartEntryPoint</argument>
-
-              </arguments>
-            </configuration>
-            <dependencies>
-              <dependency>
-                <groupId>net.cardosi.j2cl</groupId>
-                <artifactId>build-tools</artifactId>
-                <version>0.3-SNAPSHOT</version>
-                <type>jar</type>
-              </dependency>
-            </dependencies>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 
   <repositories>
     <repository>
