--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <!--
   #%L
-  connected
+  Connected
   %%
-  Copyright (C) 2017 Vertispan
+  Copyright (C) 2017 - 2019 Vertispan
   %%
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -17,12 +17,4 @@
   limitations under the License.
   #L%
   -->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<head>
-    <title>Boxes and Lines</title>
-</head>
-<body>
-<script src='app.js'></script>
-</body>
-</html>
+<web-app></web-app>
